--- a/.settings/org.jboss.tools.seam.core.prefs
+++ b/.settings/org.jboss.tools.seam.core.prefs
@@ -1,4 +1,6 @@
-<<<<<<< HEAD
+=\=\=\=\=\=\=
+<<<<<<<=HEAD
+>>>>>>>=branch 'master' of https\://github.com/tiagolpadua/seam_basic.git
 action.package=org.domain.seambasic.session
 action.sources=/seam_basic/src/main/java
 eclipse.preferences.version=1
@@ -15,21 +17,3 @@ seam.test.creating=false
 seam.test.project=seam_basic-test
 test.package=org.domain.seambasic.test
 test.sources=/seam_basic-test/test-src
-=======
-action.package=org.domain.seambasic.session
-action.sources=/seam_basic/src/main/java
-eclipse.preferences.version=1
-model.package=org.domain.seambasic.entity
-model.sources=/seam_basic/src/main/java
-seam.ejb.project=seam_basic
-seam.project.connection.profile=New HSQLDB
-seam.project.deployment.type=war
-seam.project.settings.version=1.1
-seam.project.web.root.folder=/seam_basic/src/main/webapp
-seam.runtime.name=jboss-seam-2.2.2.Final
-seam.settings.changed.by.user=true
-seam.test.creating=false
-seam.test.project=seam_basic-test
-test.package=org.domain.seambasic.test
-test.sources=/seam_basic-test/test-src
->>>>>>> branch 'master' of https://github.com/tiagolpadua/seam_basic.git
