--- a/pom.xml
+++ b/pom.xml
@@ -28,11 +28,13 @@
 			</exclusions>
 			<scope>compile</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
 			<artifactId>jboss-seam-debug</artifactId>
 			<version>2.2.2.Final</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
 			<artifactId>jboss-seam-ui</artifactId>
@@ -48,12 +50,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<!-- <dependency> -->
-		<!-- <groupId>org.jboss.seam</groupId> -->
-		<!-- <artifactId>jboss-seam-ui</artifactId> -->
-		<!-- <version>2.0.1.GA</version> -->
-		<!-- <scope>compile</scope> -->
-		<!-- </dependency> -->
+
 		<!-- Seam makes use of Hibernate validator and sadly depends on JTA and 
 			JPA even if we don't use it -->
 		<dependency>
@@ -61,6 +58,7 @@
 			<artifactId>jta</artifactId>
 			<version>1.1</version>
 		</dependency>
+
 		<dependency>
 			<groupId>javax.persistence</groupId>
 			<artifactId>persistence-api</artifactId>
@@ -73,16 +71,12 @@
 			<artifactId>jsf-api</artifactId>
 			<version>1.2_04-p02</version>
 		</dependency>
+
 		<dependency>
 			<groupId>javax.faces</groupId>
 			<artifactId>jsf-impl</artifactId>
 			<version>1.2_04-p02</version>
 		</dependency>
-		<!-- <dependency> -->
-		<!-- <groupId>com.sun.facelets</groupId> -->
-		<!-- <artifactId>jsf-facelets</artifactId> -->
-		<!-- <version>1.1.11</version> -->
-		<!-- </dependency> -->
 
 		<dependency>
 			<groupId>com.sun.facelets</groupId>
@@ -101,12 +95,12 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>3.6.3.Final</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
 			<version>3.0.0.GA</version>
 		</dependency>
-
 
 		<dependency>
 			<groupId>javassist</groupId>
@@ -134,11 +128,12 @@
 			<scope>compile</scope>
 		</dependency>
 
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.jboss.resteasy</groupId> -->
-<!-- 			<artifactId>resteasy-jaxrs</artifactId> -->
-<!-- 			<version>2.2.1.GA</version> -->
-<!-- 		</dependency> -->
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-jackson-provider</artifactId>
+			<version>2.0.1.GA</version>
+		</dependency>
 
 	</dependencies>
 </project>
+
